# Kyrsova_Robota_C-

ChompBotEasy/: chomp_ai.cpp  probs.cpp
ChompBotHard/: chomp_ai.cpp  probs.cpp
ChompBotMedium/: CMakeLists.txt  chomp_ai.cpp  probs.cpp
